--- a/static/layout.css
+++ b/static/layout.css
@@ -86,10 +86,21 @@ a.menu_item_text:visited {
 .footer {
   position:absolute;
   float:none;
-  top:90%;
+  bottom:5%;
   left:10%;
-  width:80%;
+  width:75%;
   height:5%;
   font-family:sans-serif;
   font-size:8pt;
 }
+
+.copyright {
+  position:relative; 
+  float:left;
+}
+
+.updated {
+  position:relative; 
+  float:right;
+}
+
